--- a/src/htmldirectory/gallery.html
+++ b/src/htmldirectory/gallery.html
@@ -3,26 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" href="{{ url_for('static', path='style.css') }}/?id=1ds1">
+    <link rel="stylesheet" href="{{ url_for('static', path='style.css') }}/?id=1ds44frr4f555fff4ff555ds1">
     <link rel="icon" href="{{ url_for('static', path='favicon.ico') }}">
+    <link rel="stylesheet" href="{{ url_for('static', path='style.css') }}/?id=1s55ds1">
+</head>
 </head>
 <body>
 {% include "header.html" %}
 
-<h1>Christmas Visits with Santa Mark</h1>
-<h2>House Call or Party</h2>
-Santa can come to your home or holiday party for Photos, Story Telling, Caroling, Gift Giving or whatever else you might have in mind.<br>
-Just ask! <br>
-
-<a href="/booking"><button class="button">See Rates</button></a>
-
-<br>
-<img src="{{ url_for('static', path='FB_IMG_1637615348424.jpg') }}" width="500px">
+<h1>Gallery</h1>
+<br><br>
+<a href="{{ url_for('static', path='FB_IMG_1637615348424.jpg') }}"><img src="{{ url_for('static', path='FB_IMG_1637615348424.jpg') }}" width="500px"></a>
 <img src="{{ url_for('static', path='FB_IMG_1637615437607.jpg') }}" width="500px">
 <img src="{{ url_for('static', path='FB_IMG_1641144420291.jpg') }}" width="500px">
 <img src="{{ url_for('static', path='FB_IMG_1636497702106.jpg') }}" width="500px">
 <img src="{{ url_for('static', path='FB_IMG_1636497721456.jpg') }}" width="500px">
 <img src="{{ url_for('static', path='FB_IMG_1637373239319.jpg') }}" width="500px">
+
+
+
 
 </body>
 </html>
