--- a/src/htmldirectory/header.html
+++ b/src/htmldirectory/header.html
@@ -1,6 +1,6 @@
-<div class="header" id="header">
+<div class="header" id="header" style="display: block; background-color: rgb(243, 8, 8); border:hsl(19, 16%, 77%) solid 3px; border-radius: 12px; text-align:middle">
     <a href="/"><button class="button">Home</button></a>
     <a href="/booking"><button class="button">Book Now</button></a>
     <a href="/gallery"><button class="button">Gallery</button></a>
-    <span style="padding: 10px; font-size: 30px; float: right; margin:auto; vertical-align:middle">Santa Mark&nbsp;&nbsp;&nbsp;&nbsp;</span>
+    <a href="/"><img style="border:none; margin-top:15px; float:right" src="{{ url_for('static', path='santa_mark.png') }}" height="40px;"></a>
 </div>
