--- a/src/htmldirectory/gallery.html
+++ b/src/htmldirectory/gallery.html
@@ -5,23 +5,21 @@
     <title></title>
     <link rel="stylesheet" href="{{ url_for('static', path='style.css') }}/?id=1ds44frr4f555fff4ff555ds1">
     <link rel="icon" href="{{ url_for('static', path='favicon.ico') }}">
-    <link rel="stylesheet" href="{{ url_for('static', path='style.css') }}/?id=1s55ds1">
+    <link rel="stylesheet" href="{{ url_for('static', path='/lightbox/css/lightbox.min.css') }}">
 </head>
 </head>
 <body>
 {% include "header.html" %}
 
 <h1>Gallery</h1>
+{% for pic in pics %}
+<a class="example-image-link" href="http://{{ hostname }}/static/{{ pic }}" data-lightbox="example-1"><img src="http://{{ hostname }}/static/{{ pic }}" height="300"></a>
+{% endfor %}
 <br><br>
-<a href="{{ url_for('static', path='FB_IMG_1637615348424.jpg') }}"><img src="{{ url_for('static', path='FB_IMG_1637615348424.jpg') }}" width="500px"></a>
-<img src="{{ url_for('static', path='FB_IMG_1637615437607.jpg') }}" width="500px">
-<img src="{{ url_for('static', path='FB_IMG_1641144420291.jpg') }}" width="500px">
-<img src="{{ url_for('static', path='FB_IMG_1636497702106.jpg') }}" width="500px">
-<img src="{{ url_for('static', path='FB_IMG_1636497721456.jpg') }}" width="500px">
-<img src="{{ url_for('static', path='FB_IMG_1637373239319.jpg') }}" width="500px">
 
 
 
+<script src="{{ url_for('static', path='lightbox/js/lightbox-plus-jquery.min.js') }}"></script>
 
 </body>
 </html>
