--- a/src/htmldirectory/header.html
+++ b/src/htmldirectory/header.html
@@ -2,5 +2,5 @@
     <a href="/"><button class="button">Home</button></a>
     <a href="/booking"><button class="button">Book Now</button></a>
     <a href="/gallery"><button class="button">Gallery</button></a>
-    <a href="/"><img style="border:none; margin-top:15px; float:right" src="{{ url_for('static', path='santa_mark.png') }}" height="40px;"></a>
+    <a href="/"><img style="border:none; margin-top:15px; margin-right: 10px; float:right" src="{{ url_for('static', path='santa_mark.png') }}" height="40px;"></a>
 </div>
