--- a/src/htmldirectory/gallery.html
+++ b/src/htmldirectory/gallery.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" href="{{ url_for('static', path='style.css') }}/?id=1ds44frr4f555fff4ff555ds1">
-    <link rel="icon" href="{{ url_for('static', path='favicon.ico') }}">
-    <link rel="stylesheet" href="{{ url_for('static', path='/lightbox/css/lightbox.min.css') }}">
+    <link rel="stylesheet" href="http://{{ hostname }}/static/style.css">
+    <link rel="icon" href="http://{{ hostname }}/static/favicon.ico">
+    <link rel="stylesheet" href="http://{{ hostname }}/static/lightbox/css/lightbox.min.css">
 </head>
 </head>
 <body>
@@ -19,7 +19,7 @@
 
 
 
-<script src="{{ url_for('static', path='lightbox/js/lightbox-plus-jquery.min.js') }}"></script>
+<script src="http://{{ hostname }}/static/lightbox/js/lightbox-plus-jquery.min.js"></script>
 
 </body>
 </html>
