--- a/src/htmldirectory/booking.html
+++ b/src/htmldirectory/booking.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" href="{{ url_for('static', path='style.css') }}/?id=1555s55ds1">
-    <link rel="icon" href="{{ url_for('static', path='favicon.ico') }}">
+    <link rel="stylesheet" href="http://{{ hostname }}/static/style.css">
+    <link rel="icon" href="http://{{ hostname }}/static/favicon.ico">
 </head>
 <body>
 {% include "header.html" %}
