--- a/src/htmldirectory/booking.html
+++ b/src/htmldirectory/booking.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" href="http://{{ hostname }}/static/style.css">
-    <link rel="icon" href="http://{{ hostname }}/static/favicon.ico">
+    <link rel="stylesheet" href="/static/style.css">
+    <link rel="icon" href="/static/favicon.ico">
 </head>
 <body>
 {% include "header.html" %}
