--- a/src/htmldirectory/gallery.html
+++ b/src/htmldirectory/gallery.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title></title>
-    <link rel="stylesheet" href="http://{{ hostname }}/static/style.css">
-    <link rel="icon" href="http://{{ hostname }}/static/favicon.ico">
-    <link rel="stylesheet" href="http://{{ hostname }}/static/lightbox/css/lightbox.min.css">
+    <link rel="stylesheet" href="/static/style.css">
+    <link rel="icon" href="/static/favicon.ico">
+    <link rel="stylesheet" href="/static/lightbox/css/lightbox.min.css">
 </head>
 </head>
 <body>
@@ -13,13 +13,13 @@
 
 <h1>Gallery</h1>
 {% for pic in pics %}
-<a class="example-image-link" href="http://{{ hostname }}/static/{{ pic }}" data-lightbox="example-1"><img src="http://{{ hostname }}/static/{{ pic }}" height="300"></a>
+<a class="example-image-link" href="/static/{{ pic }}" data-lightbox="example-1"><img src="http://{{ hostname }}/static/{{ pic }}" height="300"></a>
 {% endfor %}
 <br><br>
 
 
 
-<script src="http://{{ hostname }}/static/lightbox/js/lightbox-plus-jquery.min.js"></script>
+<script src="/static/lightbox/js/lightbox-plus-jquery.min.js"></script>
 
 </body>
 </html>
