add choose adventure secret link

--- a/src/htmldirectory/choose_adventure.html
+++ b/src/htmldirectory/choose_adventure.html
@@ -37,6 +37,7 @@
 {% for name, choices in story.items() %}
     {{ make_choose(name, choices) }}
 {% endfor %}
-<input type="submit" value="Submit">
+<input type="submit" class="button" value="Submit" style="margin-left: 80px;">
 </form>
 
+<div style="height: 400px;"></div>
