--- a/src/htmldirectory/index.html
+++ b/src/htmldirectory/index.html
@@ -23,11 +23,9 @@
     <div id="picture" style="width: 49%; text-align: center; min-width:550px;">
 
             <a href="/gallery"><img style="text-align:center; margin-top: 20px" src="/static/FB_IMG_1637615437607.jpg" width="500px"></a>
-    </div>
-
-        
+    </div>       
 </div>
-
+<a href="/choose_adventure"><img style="text-align:center; margin-top: 20px; float:right" src="/static/favicon.ico" width="10px"></a>
 
 <script>
 
