--- a/src/htmldirectory/choose_adventure.html
+++ b/src/htmldirectory/choose_adventure.html
@@ -16,14 +16,15 @@
     {% for choice in choices %}
         {% if choice['name'] == 'Special Request' %}
         <div title="{{ choice['snippet'] }}">
-            <input type="radio" id="{{ choice['name'] }}" name="{{ name }}" value="{{ choice['name'] }}">
+            <input style="margin:6px;" type="radio" id="{{ choice['name'] }}" name="{{ name }}" value="{{ choice['name'] }}">
             <label for="html">{{ choice['name'] }}</label>
             <span style="color: beige; font-size: x-small;">{{ choice['snippet'] }}</span><span style="background-color:antiquewhite; border: rgb(182, 181, 183) 2px solid; border-radius:7px; color: rgb(212, 12, 59); font-size: small; padding: 2px">+$20</span><br>
-            <input type="text" name="{{ name }}|{{ choice['name'] }}" id="{{ choice['name'] }}">
+            
+            <textarea style="width:50%; margin-left: 30px;" name="{{ name }}|{{ choice['name'] }}" id="{{ choice['name'] }}"></textarea>
         </div>
         {% else %}
         <div title="{{ choice['snippet'] }}">
-            <input type="radio" id="{{ choice['name'] }}" name="{{ name }}" value="{{ choice['name'] }}">
+            <input style="margin:6px;" type="radio" id="{{ choice['name'] }}" name="{{ name }}" value="{{ choice['name'] }}">
             <label for="html">{{ choice['name'] }}</label>
             <span style="color: beige; font-size: x-small;">{{ choice['snippet'] }}</span>
         </div>
