--- a/src/htmldirectory/adventure.html
+++ b/src/htmldirectory/adventure.html
@@ -24,7 +24,6 @@
 </div>
 
 
-
-
 <br><br>
-<a href="/choose_adventure"><button class="button">choose another adventure</button></a>
+<a href="/choose_adventure"><button class="button">choose another adventure</button></a><br>
+<a href="/get_adventures"><button>get_adventures</button></a>
