--- a/src/htmldirectory/booking.html
+++ b/src/htmldirectory/booking.html
@@ -73,6 +73,7 @@ Spots are limited, so book your Sneaky Santa visit now!
     <span style="font-size: 20px"><strong><span style="color: blue">How many reindeer does Santa need to reach you? </span></strong></span>
     <br><br>
     <img
+        style="width: 100%; max-width: 1000px; height: auto;"
         src="/static/artwork/logo/radius.jpg"
         alt="Reindeer Radius">
     <br><br>
