--- a/src/htmldirectory/booking.html
+++ b/src/htmldirectory/booking.html
@@ -71,8 +71,9 @@ Introducing *Sneaky Santa* — a unique holiday experience where Santa himself d
 Whether he’s tiptoeing by the tree or caught red-handed on your security camera, your family will witness a real-life Santa sighting that brings the wonder of Christmas to life.<br>
 Perfect for kids and the young at heart, this one-of-a-kind surprise creates lasting memories and holiday cheer!<br>
 Spots are limited, so book your Sneaky Santa visit now! <br>
-<img src="static/artwork/logo/sneaky_tmb.png" alt="Watch Video" style="width:100%; max-width:200px; cursor:pointer;" onclick="openModal()">
-    </span>
+<img src="static/artwork/logo/sneaky_tmb.png" alt="Watch Video" style="width:100%; max-width:250px; cursor:pointer;" onclick="openModal()">
+    </span><br>
+    <span style="color: red; margin-left:20px"><strong>Watch to the end!!</strong></span>
     
     
 </div>
