--- a/src/htmldirectory/booking.html
+++ b/src/htmldirectory/booking.html
@@ -109,7 +109,7 @@ Spots are limited, so book your Sneaky Santa visit now! <br>
     <span style="font-size: 20px"><strong><span style="color: blue">How many reindeer does Santa need to reach you? </span></strong></span>
     <br><br>
     <img
-        style="width: 100%; max-width: 1000px; height: auto;"
+        style="width: 100%; height: 100vh;"
         src="/static/artwork/logo/radius.jpg"
         alt="Reindeer Radius">
     <br><br>
