--- a/src/htmldirectory/gallery.html
+++ b/src/htmldirectory/gallery.html
@@ -23,5 +23,18 @@
 
 <script src="/static/lightbox/js/lightbox-plus-jquery.min.js"></script>
 
+
+<script>
+    console.log(lightbox)
+    lightbox.option({
+      'resizeDuration': 200,
+      'wrapAround': true,
+      'imageFadeDuration': 300,
+      'disableScrolling': true,
+      'alwaysShowNavOnTouchDevices': true,
+    })
+</script>
+
+
 </body>
 </html>
