--- a/src/htmldirectory/helpers/footer.html
+++ b/src/htmldirectory/helpers/footer.html
@@ -1,26 +1,118 @@
 <!-- Footer -->
-<div id="footer">
-    <div class="container">
+				<div id="footer">
+					<div class="container">
+						<div class="row">
 
-        <div class="row">
-            <div class="col-12">
+							<!-- Tweets -->
+								<section class="col-4 col-12-mobile">
+									<header>
+										<h2 class="icon brands fa-facebook-f"><span class="label">Tweets</span></h2>
+                                        
+									</header>
+									<ul class="divided">
+										<li>
+											<article class="tweet">
+												Amet nullam fringilla nibh nulla convallis tique ante sociis accumsan.
+												<span class="timestamp">5 minutes ago</span>
+											</article>
+										</li>
+										<li>
+											<article class="tweet">
+												Hendrerit rutrum quisque.
+												<span class="timestamp">30 minutes ago</span>
+											</article>
+										</li>
+										<li>
+											<article class="tweet">
+												Curabitur donec nulla massa laoreet nibh. Lorem praesent montes.
+												<span class="timestamp">3 hours ago</span>
+											</article>
+										</li>
+										<li>
+											<article class="tweet">
+												Lacus natoque cras rhoncus curae dignissim ultricies. Convallis orci aliquet.
+												<span class="timestamp">5 hours ago</span>
+											</article>
+										</li>
+									</ul>
+								</section>
 
-                <!-- Contact -->
-                    <section class="contact">
-                        <header>
-                            <h3>Find Me On Social Media</h3>
-                            <p>Plan your next event with Santa Mark</p>
-                        </header>
-                        <ul class="icons">
-                            <li><a href="https://www.youtube.com/evezor" class="icon brands fa-youtube"><span class="label">Youtube</span></a></li>
-                            <li><a href="https://www.facebook.com/EvezorInc/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-                        </ul>
-                    </section>
+							<!-- Posts -->
+								<section class="col-4 col-12-mobile">
+									<header>
+										<h2 class="icon brands fa-youtube"><span class="label">Posts</span></h2>
+									</header>
+									<ul class="divided">
+										<li>
+											<article class="post stub">
+												<header>
+													<h3><a href="#">Nisl fermentum integer</a></h3>
+												</header>
+												<span class="timestamp">3 hours ago</span>
+											</article>
+										</li>
+										<li>
+											<article class="post stub">
+												<header>
+													<h3><a href="#">Phasellus portitor lorem</a></h3>
+												</header>
+												<span class="timestamp">6 hours ago</span>
+											</article>
+										</li>
+										<li>
+											<article class="post stub">
+												<header>
+													<h3><a href="#">Magna tempus consequat</a></h3>
+												</header>
+												<span class="timestamp">Yesterday</span>
+											</article>
+										</li>
+										<li>
+											<article class="post stub">
+												<header>
+													<h3><a href="#">Feugiat lorem ipsum</a></h3>
+												</header>
+												<span class="timestamp">2 days ago</span>
+											</article>
+										</li>
+									</ul>
+								</section>
+
+							<!-- Photos -->
+								<section class="col-4 col-12-mobile">
+									<header>
+										<h2 class="icon solid fa-camera circled"><span class="label">Photos</span></h2>
+                                        <h3>Gallery</h3>
+									</header>
+									<div class="row gtr-25">
+										<div class="col-6">
+											<a href="/gallery" class="image fit"><img src="/static/sample_image.jpg" alt="" /></a>
+										</div>
+										<div class="col-6">
+											<a href="/gallery" class="image fit"><img src="/static/sample_image.jpg" alt="" /></a>
+										</div>
+										<div class="col-6">
+											<a href="/gallery" class="image fit"><img src="/static/sample_image.jpg" alt="" /></a>
+										</div>
+										<div class="col-6">
+											<a href="/gallery" class="image fit"><img src="/static/sample_image.jpg" alt="" /></a>
+										</div>
+										<div class="col-6">
+											<a href="/gallery" class="image fit"><img src="/static/sample_image.jpg" alt="" /></a>
+										</div>
+										<div class="col-6">
+											<a href="/gallery" class="image fit"><img src="/static/sample_image.jpg" alt="" /></a>
+										</div>
+									</div>
+								</section>
+
+						</div>
+						<hr />
 
                 <!-- Copyright -->
                 <div class="copyright">
                     <ul class="menu">
-                        <li>&copy; Evezor Inc. All rights reserved.</li>
+                        <li>&copy; SantaMark4Xmas All rights reserved.</li>
                     </ul>
                 </div>
             </div>
