ornaments and small changes

--- a/src/htmldirectory/helpers/footer.html
+++ b/src/htmldirectory/helpers/footer.html
@@ -6,7 +6,7 @@
 							<!-- Tweets -->
 								<section class="col-4 col-12-mobile">
 									<header>
-										<h2 class="icon brands fa-facebook-f"><span class="label">Tweets</span></h2>
+										<a href="facebook.com/santamark4xmas"><h2 class="icon brands fa-facebook-f"><span class="label">Facebook</span></h2></a>
                                         
 									</header>
 									<ul class="divided">
