more updates to test_home

--- a/src/htmldirectory/helpers/navbar.html
+++ b/src/htmldirectory/helpers/navbar.html
@@ -1,9 +1,9 @@
 <!-- Nav -->
-<nav id="nav">
-    <ul>
+<nav id="nav" style="background: rgba(30, 30, 30, 0.949); padding: 0.5em;">
+    <ul >
         <li>
             <a href="/">Home</a>
-            <ul>
+            <ul style="background: rgba(30, 30, 30, 0.85); padding: 0.5em; border-radius: 8px;">
                 <li><a href="/blog">Blog</a></li>
                 <li><a href="/blog/about_us">About Me</a></li>
                 <li><a href="/blog/about_us">Contact Me</a></li>
@@ -13,6 +13,5 @@
         <li><a href="/booking">Booking</a></li>
         <!-- <li><a href="https://edgar.evezor.com">Edge</a></li> -->
         <li><a href="/gallery">Gallery</a></li>
-
     </ul>
 </nav>
