--- a/src/htmldirectory/test_home.html
+++ b/src/htmldirectory/test_home.html
@@ -251,7 +251,7 @@
           <article class="col-3 col-6-mobile special">
             <a href="#" class="image featured"><img src="/static/home/images/lighting.jpg" alt="" /></a>
             <header>
-              <h3><a href="#">Town Tree Lighting Ceremony</a></h3>
+              <h3><a href="#">A Very Merry Huntley</a></h3>
             </header>
             <p>
               Santa Mark is the heart of Huntley’s Christmas Tree Lighting Ceremony. 
@@ -275,7 +275,7 @@
           <article class="col-3 col-6-mobile special">
             <a href="#" class="image featured"><img src="/static/home/images/nightmare-b4-xmas.jpg" alt="" /></a>
             <header>
-              <h3><a href="#"></a>Nighmare Before Christmas</h3>
+              <h3><a href="#"></a>Nightmare Before Christmas</h3>
             </header>
             <p>
               It’s a hauntingly jolly good time at the Nightmare Before Christmas Farmers Market! 
@@ -288,7 +288,7 @@
           <article class="col-3 col-6-mobile special">
             <a href="#" class="image featured"><img src="/static/home/images/swimming.jpg" alt="" /></a>
             <header>
-              <h3><a href="#">Summer Clause Swimming with Santa</a></h3>
+              <h3><a href="#">Summer Claus Swimming with Santa</a></h3>
             </header>
             <p>
               Santa Mark makes a splash at Summer Claus! 
